[gd_scene load_steps=6 format=3 uid="uid://iemglv3d1uld"]

[ext_resource type="Script" path="res://scene/Level/level_3.gd" id="1_wao5l"]
[ext_resource type="PackedScene" uid="uid://dt0py212vaenk" path="res://scene/player.tscn" id="2_b5bpn"]
[ext_resource type="PackedScene" uid="uid://ccs8lrewsoxfe" path="res://scene/Global_level_Background.tscn" id="2_f6yl6"]
[ext_resource type="PackedScene" uid="uid://bq5djiw3kyh0o" path="res://scene/meteor.tscn" id="4_c57j2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afjee"]
size = Vector2(48, 48)

[node name="level_3" type="Node2D"]
script = ExtResource("1_wao5l")

[node name="Global_background" parent="." instance=ExtResource("2_f6yl6")]
position = Vector2(6.10352e-05, 1.52588e-05)

[node name="Player" parent="." instance=ExtResource("2_b5bpn")]
position = Vector2(544, 544)

[node name="Obecjtt_meteor" type="Node2D" parent="."]
scale = Vector2(23, 5.5)

[node name="Meteor" parent="Obecjtt_meteor" instance=ExtResource("4_c57j2")]
position = Vector2(8.69565, 68.3636)
scale = Vector2(1, 1)

[node name="Meteor2" parent="Obecjtt_meteor" instance=ExtResource("4_c57j2")]
position = Vector2(24.6957, 68.3636)
scale = Vector2(1, 1)

[node name="Meteor3" parent="Obecjtt_meteor" instance=ExtResource("4_c57j2")]
position = Vector2(39.3043, 68.3636)
scale = Vector2(1, 1)

[node name="Spawn_Enemy" type="Node2D" parent="."]
position = Vector2(536, 160)

[node name="Marker2D2" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(-310, 66)

[node name="Marker2D3" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(322, 66)

[node name="Marker2D5" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(8, -64)

[node name="Marker2D6" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(-374, 66)

[node name="Marker2D7" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(386, 66)

[node name="Marker2D10" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(138, -62)

[node name="Marker2D11" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(202, -62)

[node name="Marker2D12" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(-118, -62)

[node name="Marker2D13" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(-182, -62)

[node name="Marker2D16" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(-446, 66)

[node name="Marker2D17" type="Marker2D" parent="Spawn_Enemy"]
position = Vector2(450, 66)

[node name="Spawn_MidBos" type="Node2D" parent="."]
position = Vector2(536, 160)

[node name="MidBoss" type="Marker2D" parent="Spawn_MidBos"]
position = Vector2(8, 128)

[node name="Next_Area" type="Area2D" parent="."]
position = Vector2(-8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Next_Area"]
position = Vector2(1132, 544)
shape = SubResource("RectangleShape2D_afjee")
